# SpectralGPPlus

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
data/: data_gen.py
docs/: gettingstarted.md  index.md
example/: Buckling_MF_GP_Example_Grouped_Cat.py  Buckling_MF_GP_Example_Separate_Cat.py  wing_gp_example_MF.py  wing_gp_example_MF_multi_mean.py
experiments_GP/: A10_tabpfn1d_abs_x_GP.py  A11_tabpfn1d_sin_freq_x_GP.py  A14_tabpfn1d_step_GP.py  A15_tabpfn1d_x_squared_GP.py  A18_tabpfn1d_linear_homoscedastic_GP.py  A1_wing_GP.py  A1_wing_GP_vs_TabPFN.py  A4_ackley_GP.py  gp_experiment_utils.py  plot_gp1d_predictions.py  plot_multid_slice_predictions.py  plot_validation_curves.py  run_gp_experiments.py  tabpfn1d_gp_base.py
experiments_ORF/: A10_tabpfn1d_abs_x_ORF.py  A11_tabpfn1d_sin_freq_x_ORF.py  A14_tabpfn1d_step_ORF.py  A15_tabpfn1d_x_squared_ORF.py  A18_tabpfn1d_linear_homoscedastic_ORF.py  A1_wing_ORF.py  A1_wing_ORF_vs_TabPFN.py  A4_ackley_ORF.py  S1_toa_ORF.py  load_experimental_data.py  orf_experiment_utils.py  plot_multid_slice_predictions.py  plot_orf1d_predictions.py  plot_validation_curves.py  run_orf_experiments.py  tabpfn1d_orf_base.py  toa_orf_base.py
experiments_RFF/: A10_tabpfn1d_abs_x_RFF.py  A11_tabpfn1d_sin_freq_x_RFF.py  A14_tabpfn1d_step_RFF.py  A15_tabpfn1d_x_squared_RFF.py  A18_tabpfn1d_linear_homoscedastic_RFF.py  A1_wing_RFF.py  A1_wing_RFF_vs_TabPFN.py  A4_ackley_RFF.py  S1_toa_RFF.py  approximator.py  load_experimental_data.py  plot_multid_slice_predictions.py  plot_rff1d_predictions.py  plot_validation_curves.py  rff_experiment_utils.py  run_rff_experiments.py  tabpfn1d_rff_base.py  toa_rff_base.py  toa_stgp_base.py  (+1 more)
(+266 files in other folders)
